no commit message

--- a/Languages/Language_processing/Post_processing/JavaScript/babel.node_cli.txt
+++ b/Languages/Language_processing/Post_processing/JavaScript/babel.node_cli.txt
@@ -168,7 +168,7 @@ CONF.exclude                      #Inverse
 --only|ignore
 CONF.only|ignore                  #Like CONF.include|exclude except applies to all sub-CONFs not only current one
 .babelignore                      #Like CONF.only|ignore. Same syntax as .gitignore
---copy-ignored                    #Copy ignored files, although they are not transpiled
+--no-copy-ignored                 #Do not copy ignored files
 -x|--extensions                   #'.EXT',... (def: '.es6|js|es|jsx|mjs').  Only input files with those.
 --keep-file-extensions            #
 --out-file-extension              #'EXT' of the output files
