--- a/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
+++ b/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
@@ -524,6 +524,10 @@ export VAL from "MDL"        (bl)*#Child of EXPORT_SPECIFIER, type 'ExportDefaul
 import ... from "MDL"             #Child of MODULE_DECLARATION, type 'ImportDeclaration':
                                   #  - specifiers MODULE_SPECIFIER_ARR
                                   #  - source LITERAL ("MDL")
+                              (b)##  - importKind 'type|typeof|value'|null
+  as { VAR: STR, ... }        (b)##  - [attributes IMPORT_ATTRIBUTE_ARR (type 'ImportAttribute')]
+                              (b)##     - key IDENTIFIER
+                              (b)##     - value STR
 import { VAR|default [as VAR2] }  #Child of MODULE_SPECIFIER, type 'ImportSpecifier':
                                   #  - imported IDENTIFIER (VAR)
                                   #  - local IDENTIFIER (VAR2, same as VAR by def)
