no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -9,7 +9,7 @@ ALTERNATIVES ==>                  #  - eslint (prefered): more rules, more confi
                                   #  - jscs: not maintained, merged with eslint
                                   #  - jshint
 
-VERSION ==>                       #7.0.0-alpha.1
+VERSION ==>                       #7.0.0-alpha.2
                                   #JavaScript linter, using Espree parser.
 
 TYPE                              #ESTree type
@@ -728,7 +728,9 @@ array-bracket-spacing [STR] [OBJ] #Spaces inside []
                                   #  - arraysInArrays BOOL (def: depends on 'always|never'): space if ARR item
                                   #'always' does not require spaces inside empty ARR
 computed-property-spacing [STR]   #Space around [] in OBJ[VAR] or { [VAR] }
-                                  #STR: 'never' (def), 'always'
+ [OBJ]                            #STR: 'never' (def), 'always'
+                                  #OBJ:
+                                  #  - enforceForClassMembers BOOL (def: true)
 
 space-in-parens [STR] [OBJ]       #Space inside ()
                                   #STR: 'always' or 'never' (def)
@@ -1141,7 +1143,9 @@ no-undefined                      #Avoid using value undefined
                                              \=+===============================+=/
 
 
-no-extra-boolean-cast             #Avoid BOOL typecasting in TEST
+no-extra-boolean-cast [OBJ]       #Avoid BOOL typecasting in TEST
+                                  #OBJ:
+                                  #  - enforceForLogicalOperands BOOL (def: false): including in && or || chains
 no-implicit-coercion [OBJ]        #Must use Boolean|Number|String() for typecasting, not "smart tricks"
                                   #Also must use VAL !== -1, not ~
                                   #OBJ:
