no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -2020,13 +2020,11 @@ you-dont-need-lodash-underscore/ ##Avoid Underscore|Lodash when there is a ES6 e
                                  ##  - _.isInteger() -> Number.isInteger()
                                  ##  - _.keys|assign|values|entries() -> Object.keys|assign|values|entries()
                                  ##  - _.toLower|toUpper|trim|repeat() -> STR.toLowerCase|toUpperCase|trim|repeat()
-                                 ##  - _.range() -> Array.from() or [...Array().keys()]
-                                 ##  - _.flatten[Deep]() -> ARR.flat()
+                                 ##  - _.flatten() -> ARR.flat()
                                  ##  - _.uniq() -> [...new Set()]
                                  ##  - _.isArray() -> Array.isArray()
                                  ##  - _.first|last() -> ARR[] and ARR.slice()
-                                 ##  - _.groupBy(), _.fromPairs() -> ARR.reduce()
-                                 ##  - _.partial|bind() -> FUNC.bind()
+                                 ##  - _.bind() -> FUNC.bind()
                                  ##  - _.omit|pick() -> { ...OBJ }
                                  ##  - _.startsWith|endsWith() -> STR.startsWith|endsWith()
                                  ##  - _.isNil|isNull|isUndefined() -> ==|=== null|undefined
@@ -2034,9 +2032,9 @@ you-dont-need-lodash-underscore/ ##Avoid Underscore|Lodash when there is a ES6 e
                                  ##  - _.takeRight|drop[Right]() -> ARR.slice()
                                  ##  - _.padStart|End() -> STR.padStart|End()
                                  ##  - _.upperFirst() -> STR[0].toUpperCase()
-                                 ##  - _.random() -> Math.random()
-                                 ##  - _.debounce|throttle() -> small helper function
+                                 ##  - _.throttle() -> small helper function
                                  ##Not checked:
+                                 ##  - _.isString() -> typeof
                                  ##  - _.chunk() -> ARR.reduce()
                                  ##  - _.sortBy|orderBy() -> ARR.sort()
                                  ##  - _.pickBy() -> ARR.reduce()
@@ -2048,7 +2046,13 @@ you-dont-need-lodash-underscore/ ##Avoid Underscore|Lodash when there is a ES6 e
                                  ##  - _.isEmpty() -> Object.keys().length
                                  ##  - _.keyBy() -> ARR.reduce()
                                  ##  - _.inRange() -> < >
-                                 ##Node module "eslint-plugin-you-dont-need-lodash-underscore" (6.9.0)
+                                 ##  - _.range() -> Array.from() or [...Array().keys()]
+                                 ##  - _.flattenDeep() -> ARR.flat()
+                                 ##  - _.partial() -> FUNC.bind()
+                                 ##  - _.random() -> Math.random()
+                                 ##  - _.clamp() -> Math.min|max()
+                                 ##  - _.debounce() -> small helper function
+                                 ##Node module "eslint-plugin-you-dont-need-lodash-underscore" (6.10.0)
 
 
                                              /=+===============================+=\
