no commit message

--- a/Languages/JavaScript/JavaScript_frameworks/View/One_way_data_binding/Virtual_DOM/React/react.javascript.txt
+++ b/Languages/JavaScript/JavaScript_frameworks/View/One_way_data_binding/Virtual_DOM/React/react.javascript.txt
@@ -612,7 +612,7 @@ TESTUTILS.Simulate.EVENT         ##Trigger EVENT, but still work with virtual DO
                                              \=+===============================+=/
 
 
-react/*                          ##Node module "eslint-plugin-react" (7.18.3)
+react/*                          ##Node module "eslint-plugin-react" (7.19.0)
                                  ##Can use CONF.settings.react:
                                  ##  - createClass 'FUNC' (def: 'createReactClass'): used to create RTYPE
                                  ##    when not using ES6 classes
@@ -639,7 +639,9 @@ react/require-render-return      ##Must return a value in render()
 react/forbid-component-          ##Avoid passing OBJ.forbid VAL_ARR (def: 'className', 'style') as props (except to HTML tags)
  props [OBJ]                     ##VAL can be STR or OBJ: propName STR, allowedFor 'RTYPE'_ARR
 react/forbid-dom-props [OBJ]     ##Same for HTML tags
-react/style-prop-object          ##PROP 'style' must be an OBJ
+react/style-prop-object [OBJ]    ##PROP 'style' must be an OBJ
+                                 ##OBJ:
+                                 ##  - allow 'RTYPE'_ARR
 react/void-dom-elements-
  no-children                     ##Prevent RDOM with no child (like <hr/>) from having children
 react/no-children-prop           ##Avoid passing children as props
