no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -15,7 +15,7 @@
 PURPOSE ==>                                     #Execute JavaScript code server-side
                                                 #Based on Chrome JavaScript engine V8
 
-VERSION ==>                                     #13.9.0 (current), 12.16.1 (active LTS), 10.19.0 (active LTS), 8.17.0 (active LTS)
+VERSION ==>                                     #13.10.1 (current), 12.16.1 (active LTS), 10.19.0 (active LTS), 8.17.0 (active LTS)
                                                 #Branches:
                                                 #  - "current": latest major version. New one every 0.5 years
                                                 #  - LTS: every even-numbered version
@@ -862,7 +862,7 @@ END-OF-STREAM(...)                             ##Ponyfill for finished() (1.4.4)
 ON-FINISHED(...)                               ##Similar but slightly different, i.e. not preferred (2.3.0)
 
 pipeline(ISTREAM|OSTREAM[_ARR]...,              #Like finished(STREAM.pipe(STREAM2).pipe(...), ...)
- FUNC(ERROR))->PROMISE                          #Also if one STREAM errors then other STREAM are closed (with STREAM.close|abort|destroy())
+ FUNC(ERROR))->ISTREAM|OSTREAM                  #Also if one STREAM errors then other STREAM are closed (with STREAM.close|abort|destroy())
 PUMP(...)                                      ##Ponyfill for pipeline() (3.0.0)
 
 IOSTREAM ==>                                    #Implement both ISTREAM and OSTREAM. Actually called either:
