no commit message

--- a/UX/Text/i18n/Country-dependent/Data/countries-list.node.txt
+++ b/UX/Text/i18n/Country-dependent/Data/countries-list.node.txt
@@ -5,7 +5,7 @@
 
 
 
-VERSION ==>                       #2.5.2
+VERSION ==>                       #2.5.4
 
 countries                         #OBJ of all countries
                                   #KEY is ISO 3166-2 alpha-2 code
@@ -19,6 +19,8 @@ countries                         #OBJ of all countries
                                   #  - languages STR_ARR (e.g. ['sv'])
                                   #  - emoji STR (flag emoji)
                                   #  - emojiU 'U+XXXX U+XXXX' (flag emoji)
+countries2to3
+countries3to2                     #OBJ converting between 2-letter to 3-letter country codes
 
 continents                        #{ KEY: STR, ... } of all continents
                                   #E.g. { EU: 'Europe' }
