no commit message

--- a/Languages/Static_analysis/General/JavaScript/globals.json.txt
+++ b/Languages/Static_analysis/General/JavaScript/globals.json.txt
@@ -5,14 +5,14 @@
 
 
 
-VERSION ==>                       #12.3.0
+VERSION ==>                       #12.4.0
 
 GLOBALS                           #Each property has an OBJ with all global properties.
                                   #Values are BOOL, false means "readonly"
 
 GLOBALS.builtin                   #ES5+ES6
 GLOBALS.es5|es2015|es2017         #
-GLOBALS.browser|node|
+GLOBALS.browser|node[Builtin]|
  shared-node-browser              #
 GLOBALS.worker|serviceworker|
  webextensions                    #
