no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -1273,7 +1273,8 @@ unicorn/prefer-type-error        ##Must throw TypeError after a TEST like typeof
 unicorn/error-message            ##Avoid new Error(), must do new Error(STR)
 
 unicorn/catch-error-name [OBJ]   ##Catch clause variable name must be called OBJ.name STR (def: 'error')
-                                 ##Can use OBJ.caughtErrorsIgnorePattern REGEXP for patterns to ignore
+                                 ##OBJ:
+                                 ##  - caughtErrorsIgnorePattern REGEXP (def: '_' or *Error or *error): patterns to ignore
 no-ex-assign                      #Avoid assigning to ERROR in catch clause
 no-useless-catch                  #Avoid catch clause that only rethrows ERROR
 no-unsafe-finally                 #Avoid return|throw|break|continue in finally clauses.
@@ -1558,7 +1559,7 @@ no-useless-concat                 #Avoid STR_LIT + STR2_LIT
 prefer-template                   #Avoid STR + STR2, prefer `...`
 no-template-curly-in-string       #Avoid ${} inside "" or ''
 
-unicorn/*                        ##Module "eslint-plugin-unicorn" (16.1.1)
+unicorn/*                        ##Module "eslint-plugin-unicorn" (17.2.0)
 unicorn/prefer-starts-ends-with  ##Must use STR.startsWith|endsWith() when possible
 unicorn/prefer-trim-start-end    ##Prefer STR.trimStart|End() over STR.trimLeft|Right()
 unicorn/prefer-string-slice      ##Must use STR.slice() instead of STR.substr|substring()
@@ -1569,6 +1570,19 @@ unicorn/number-literal-case      ##Consistent casing for 0x... 0o... 0b... and N
 unicorn/escape-case              ##Must be uppercase after \x... \u...
 
 unicorn/no-console-spaces        ##Avoid console.log(STR, STR2) where STR or STR2 have trailing spaces
+
+unicorn/string-content [OBJ]     ##Avoid specific substrings in any STR
+                                 ##OBJ:
+                                 ##  - patterns OBJ:
+                                 ##     - key is substring to avoid|replace
+                                 ##     - value is either:
+                                 ##        - OBJ2:
+                                 ##           - suggest STR: what to replace to
+                                 ##           - message STR
+                                 ##           - fix BOOL (def: true): autofix
+                                 ##        - BOOL|STR: shortcut for suggest|fix
+                                 ##     - default to { "'": "`" } (i.e. must avoid ' in any STR), which must be explicitely
+                                 ##       disabled if not wanted
 
 
                                              /=+===============================+=\
