no commit message

--- a/Languages/Metaprogramming/Parsing/AST_format/TypeScript/tsestree.format.txt
+++ b/Languages/Metaprogramming/Parsing/AST_format/TypeScript/tsestree.format.txt
@@ -431,3 +431,6 @@ require(STR)                      #Type 'TSExternalModuleReference':
 
 export as namespace NAME          #Child of STATEMENT, type 'TSNamespaceExportDeclaration':
                                   #  - id IDENTIFIER
+
+import|export type ...            #On EXPORT_NAMED_DECLARATION|EXPORT_ALL_DECLARATION|IMPORT_DECLARATION:
+                                  #  - exportKind 'type' or 'value' (no type)
