--- a/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
+++ b/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
@@ -512,14 +512,14 @@ export {...} from "MDL"           #  - [source LITERAL] ("MDL")
 export default VAL                #Child of MODULE_DECLARATION, type 'ExportDefaultDeclaration':
                                   #  - declaration EXPR|FUNCTION|CLASS_DECLARATION
                                   #     - "FUNCTION|CLASS_DECLARATION": id is optional
-export * from "MDL"               #Child of MODULE_DECLARATION, type 'ExportAllDeclaration':
+export * [as VAR] from "MDL"      #Child of MODULE_DECLARATION, type 'ExportAllDeclaration':
                                   #  - source LITERAL ("MDL")
-
-export * as VAR from "MDL" (ambl)*#Child of EXPORT_SPECIFIER, type 'ExportNamespaceSpecifier':
-                           (ambl)*#  - no local
+                                  #  - [exported IDENTIFIER] (VAR)
+export * as VAR from "MDL" (ambl)##Child of EXPORT_SPECIFIER, type 'ExportNamespaceSpecifier':
+                           (ambl)##  - no local
                               (m)##  - exported -> specifier
-export VAL from "MDL"        (bl)*#Child of EXPORT_SPECIFIER, type 'ExportDefaultSpecifier':
-                             (bl)*#  - no local
+export VAL from "MDL"        (bl)##Child of EXPORT_SPECIFIER, type 'ExportDefaultSpecifier':
+                             (bl)##  - no local
 
 import ... from "MDL"             #Child of MODULE_DECLARATION, type 'ImportDeclaration':
                                   #  - specifiers MODULE_SPECIFIER_ARR
