--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -862,8 +862,16 @@ END-OF-STREAM(...)                             ##Ponyfill for finished() (1.4.4)
 ON-FINISHED(...)                               ##Similar but slightly different, i.e. not preferred (2.3.0)
 
 pipeline(ISTREAM|OSTREAM[_ARR]...,              #Like finished(STREAM.pipe(STREAM2).pipe(...), ...)
- FUNC(ERROR))->ISTREAM|OSTREAM                  #Also if one STREAM errors then other STREAM are closed (with STREAM.close|abort|destroy())
+ FUNC(ERROR))->OSTREAM                          #Also if one STREAM errors then other STREAM are closed (with STREAM.close|abort|destroy())
 PUMP(...)                                      ##Ponyfill for pipeline() (3.0.0)
+
+ISTREAM, FUNC(ISTREAM)->ISTREAM or IOSTREAM or ASYNC_ITERABLE_BUFFER ..., OSTREAM
+ITERABLE, OSTREAM
+ITERABLE, FUNC(BUFFER)->PROMISE_STR
+ASYNC_ITERABLE, FUNC(ASYNC_ITERABLE)->ASYNC_ITERABLE|PROMISE_STR
+
+At least 2 streams
+First is reading, others reading+writing, last writing only
 
 IOSTREAM ==>                                    #Implement both ISTREAM and OSTREAM. Actually called either:
                                                 #  - STREAM.Duplex
