no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -151,6 +151,27 @@ ASYNCRESOURCE.triggerId()->PARENT_TASK_ID       #
 
 --no-force-async-hooks-checks                   #Do not do extra runtime checks related to async hooks
 
+new AsyncLocalStorage()                      13*#Create STOREs, i.e. objects available inside a specific function and its closures (including async)
+ASYNC_LOCAL_STORAGE.run(STORE, FUNC())       13*#Creates a STORE that only exists within the current async context.
+                                             13*#An async context is the current function and its closures including async ones (promise or callback).
+                                             13*#Creates a new async context
+                                             13*#STORE is undefined outside that context.
+                                             13*#STORE is cleaned up once the context stops.
+                                             13*#STORE can be anything (e.g. an OBJ or MAP)
+ASYNC_LOCAL_STORAGE.runSyncAndReturn         13*#Same except:
+ (STORE, FUNC()->VAL)->VAL                   13*#  - exceptions in FUNC() are propagated
+                                             13*#  - FUNC() return value is returned too
+                                             13*#  - FUNC() is fired in same microtask
+                                             13*#  - can use util.promisify()
+ASYNC_LOCAL_STORAGE.getStore()->STORE        13*#Retrieve the STORE
+ASYNC_LOCAL_STORAGE.disable()                13*#Make all STORE undefined until run*() called again
+                                             13*#Should be called to cleanup ASYNC_LOCAL_STORAGE itself (not its STOREs)
+ASYNC_LOCAL_STORAGE.enterWithStore(STORE)    13*#Make getStore() return STORE for the current synchronous context (current function and its sync closures)
+ASYNC_LOCAL_STORAGE.exit                     13*#Opposite
+ (FUNC([...ARGS])[, ...ARGS])                13*#Creates a new async context
+ASYNC_LOCAL_STORAGE.exitSyncAndReturn
+ (FUNC([...ARGS])[, ...ARGS])                13*#Same as runSyncAndReturn() but for exit()
+
 
                                              /=+===============================+=\
                                             /  :                               :  \
@@ -861,17 +882,17 @@ finished(STREAM[, OPTS], FUNC([ERROR]))         #Call FUNC([ERROR]) when STREAM 
 END-OF-STREAM(...)                             ##Ponyfill for finished() (1.4.4)
 ON-FINISHED(...)                               ##Similar but slightly different, i.e. not preferred (2.3.0)
 
-pipeline(ISTREAM|OSTREAM[_ARR]...,              #Like finished(STREAM.pipe(STREAM2).pipe(...), ...)
- FUNC(ERROR))->OSTREAM                          #Also if one STREAM errors then other STREAM are closed (with STREAM.close|abort|destroy())
-PUMP(...)                                      ##Ponyfill for pipeline() (3.0.0)
+pipeline(SRC[, TRANSFORM...], DEST,             #Like SRC.pipe(TRANSFORM)....pipe(DEST) except:
+ FUNC(ERROR, SVAL))->OSTREAM                    #  - has a final FUNC() like finished()
+                                                #  - if one STREAM errors then other STREAM are closed (with STREAM.close|abort|destroy())
+                                                #Can use streams
+                                             13*#or sync|async iterables:
+                                                #  - SRC: ISTREAM or [ASYNC_]ITERABLE|ITERATOR
+                                                #  - TRANSFORM: IOSTREAM or FUNC(ASYNC_ITERABLE)->ASYNC_ITERABLE
+                                                #  - DEST: OSTREAM or FUNC(ASYNC_ITERABLE)->PROMISE_SVAL
+                                                #Can use ARR of arguments [SRC, TRANSFORM..., DEST] instead of variadic arguments
+PUMP(...)                                      ##Ponyfill for pipeline() (3.0.0) without iterable support
 
-ISTREAM, FUNC(ISTREAM)->ISTREAM or IOSTREAM or ASYNC_ITERABLE_BUFFER ..., OSTREAM
-ITERABLE, OSTREAM
-ITERABLE, FUNC(BUFFER)->PROMISE_STR
-ASYNC_ITERABLE, FUNC(ASYNC_ITERABLE)->ASYNC_ITERABLE|PROMISE_STR
-
-At least 2 streams
-First is reading, others reading+writing, last writing only
 
 IOSTREAM ==>                                    #Implement both ISTREAM and OSTREAM. Actually called either:
                                                 #  - STREAM.Duplex
@@ -1482,6 +1503,8 @@ TLSSOCKET.setMaxSendFragment(NUM)->BOOL         #Def|max: 16384. Min: 512.
 TLSSOCKET.getSession()->OBJ                     #OBJ: ASN.1 encoded
 TLSSOCKET.getTLSTicket()->BUFFER                #
 TLSSOCKET.get[Peer]Finished()->BUFFER           #Returns the "Finished" message, i.e. a hash of the handshake
+TLSSOCKER.exportKeyingMaterial
+ (NUM, STR[, BUFFER])->BUFFER2               13*#Returns keying material, used to prevent some network attacks
 
 --trace-tls                                  12*#
 TLSSOCKET.enableTrace()                      12*#Same as SECURECONTEXT.enableTrace
@@ -2958,6 +2981,16 @@ new SyntheticModule('VAR'_ARR, FUNC()[,OPTS])12*#SYNTHETIC_MODULE, child of VMMO
                                              12*#OPTS:
                                              12*#  - context, identifier: like SOURCE_TEXT_MODULE
 SYNTHETIC_MODULE.setExport('VAR', VAL)       12*#Define exported variable. Should be done inside constructor FUNC()
+
+measureMemory([OPTS])->PROMISE_OBJ           13*#Returns memory taken by a COBJ
+                                             13*#Prints experimental warning
+                                             13*#OPTS:
+                                             13*#  - context COBJ (def: current one)
+                                             13*#  - mode 'summary' (def) or 'detailed'
+                                             13*#Returns OBJ:
+                                             13*#  - total:
+                                             13*#     - jsMemoryEstimate NUM (in bytes)
+                                             13*#     - jsMemoryRange [MIN_NUM, MAX_NUM]
 
 
                                              /=+===============================+=\
