no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -15,7 +15,7 @@
 PURPOSE ==>                                     #Execute JavaScript code server-side
                                                 #Based on Chrome JavaScript engine V8
 
-VERSION ==>                                     #13.10.1 (current), 12.16.1 (active LTS), 10.19.0 (active LTS), 8.17.0 (active LTS)
+VERSION ==>                                     #13.11.0 (current), 12.16.1 (active LTS), 10.19.0 (active LTS), 8.17.0 (active LTS)
                                                 #Branches:
                                                 #  - "current": latest major version. New one every 0.5 years
                                                 #  - LTS: every even-numbered version
@@ -1852,8 +1852,12 @@ promises.*(...)                                 #Like DNS.*(...) except returns 
 platform()->STR                                 #"linux", "darwin", "win32", "android" or "sunos", "aix", "freebsd", "openbsd"
 type()->STR                                     #Similar to platform() but slightly more precise.
                                                 #E.g. "Linux", "Darwin", "Windows_NT", "CYGWIN_NT*", ""SunOS", "AIX", "FreeBSD", "OpenBSD"
-                                             *12#or "MinGW"
-release()->STR                                  #OS version number, e.g. "3.11.0-14-generic" (Linux), "18.0.0" (Mac), "10.0.17763" (Windows)
+                                             12*#or "MinGW"
+release()->STR                                  #OS version number, e.g. "5.3.0-40-generic" (Linux), "18.0.0" (Mac), "10.0.17763" (Windows)
+version()->STR                               13*#OS version number more precise, e.g.:
+                                             13*#  - "#32-Ubuntu SMP Fri Jan 31 20:24:34 UTC 2020" (Linux)
+                                             13*#  - "Darwin Kernel Version 18.0.0: Wed Aug 22 20:13:40 PDT 2018; root:xnu-4903.201.2~1/RELEASE_X86_64" (Mac)
+                                             13*#  - "Windows 10 Home" (Windows)
 arch()->STR                                     #"arm[64]", "ia32", "x32|x64", "mips[el]", "ppc[64]", "s390[x]"
 endianness()->STR                               #"BE" or "LE"
 
@@ -2076,12 +2080,13 @@ rmdir(PATH, FUNC(ERROR)[, OPTS])                #OPTS:
 FS-EXTRA.remove(FILE|DIR, FUNC(ERROR))         ##Like rm -rf
 WRENCH.rmdirSyncRecursive(FILE|DIR[, BOOL])    ##Same. If true, fails silently.
 
-mkdir(PATH[, MODE_INT|OPTS], FUNC(ERROR))       #OPTS:
-                                                #  - mode MODE_INT (def: 0777) (see above for Windows behavior)
+mkdir(PATH[, MODE_INT|OPTS],                    #OPTS:
+ FUNC(ERROR[, 'PATH2']))                        #  - mode MODE_INT (def: 0777) (see above for Windows behavior)
                                                 #  - recursive BOOL (def: false):
                                                 #     - create intermediary directories
                                                 #     - no error if directory exists
                                                 #     - see make-dir (see its doc) for a ponyfill
+                                             13*#'PATH2' is the topmost subdirectory that did not exist before mkdir() (undefined if none)
 FS-EXTRA.ensureFile|Dir(FILE|DIR,FUNC(ERROR))  ##Create file|dir, including parent dirs, if not existing.
 FS-EXTRA.mkdirs(DIR, FUNC(ERROR))              ##Like ensureDir()
 WRENCH.mkdirSyncRecursive(DIR[, MODE_INT])
@@ -2143,6 +2148,12 @@ writev(FD_INT, ARRAYBUFFERVIEW_ARR[, INT3],
  FUNC(ERROR, INT4, ARRAYBUFFERVIEW_ARR))     12*#Same but with ARRAYBUFFERVIEW_ARR
 read(FD_INT, TDBUFFER, INT, INT2,
 INT3, FUNC(ERROR, INT4, BUFFER))                #
+read(FD_INT[, OPTS],FUNC(ERROR,INT2,BUFFER)) 13*#Read INT2 bytes from file FD_INT and return as BUFFER
+                                             13*#OPTS:
+                                             13*#  - buffer TDBUFFER (def: Buffer.alloc(16384))
+                                             13*#  - offset INT (def: 0)
+                                             13*#  - length INT2 (def: OPTS.buffer.length)
+                                             13*#  - position INT3 (def: null)
 f[data]sync(FD_INT, FUNC(ERROR))                #Flushes to disk
                                                 #If 'data', does not flush metadata (e.g. mtime)
 
