no commit message

--- a/Languages/Language_processing/Post_processing/JavaScript/babel.node_cli.txt
+++ b/Languages/Language_processing/Post_processing/JavaScript/babel.node_cli.txt
@@ -5,7 +5,7 @@
 
 
 
-VERSION ==>                       #7.8.8
+VERSION ==>                       #7.9.2
 
 GOAL ==>                          #JavaScript source code transformation
 
@@ -82,6 +82,8 @@ ALTERNATIVES ==>                  #Must choose either:
                                   #     - except some implemented stage-3 if PLUGIN_OPTS.shippedProposals true (def: false)
                                   #  - __proto__/setPrototypeOf() PLUGINs (because of their limitations)
                                   #  - Flow, React, TypeScript
+                                  #Includes @babel/preset-modules if PLUGIN_OPTS.bugfixes true (def: false)
+@babel/preset-modules             #Preset that adds old browsers-specific transforms
 
 
                                              /=+===============================+=\
@@ -634,6 +636,9 @@ transform-typescript              #Transpile TypeScript:
                                   #PLUGIN_OPTS:
                                   #  - isTSX BOOL (def: if *.tsx)
                                   #  - jsxPragma STR (def: 'React'): like tsc --jsxFactory
+                                  #  - onlyRemoveTypeImports BOOL (def: false): like the default value of TypeScript --importsNotUsedAsValues
+                                  #    Recommended to true
+                                  #  - allowDeclareFields BOOL (def: false): only remove TYPE if "declare" is before
                                   #Should be before other transforms.
                                   #Only on *.ts[x]
 @babel/preset-typescript          #Includes only @babel/plugin-transform-typescript
