--- a/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
+++ b/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
@@ -515,8 +515,8 @@ export default VAL                #Child of MODULE_DECLARATION, type 'ExportDefa
 export * [as VAR] from "MDL"      #Child of MODULE_DECLARATION, type 'ExportAllDeclaration':
                                   #  - source LITERAL ("MDL")
                                   #  - [exported IDENTIFIER] (VAR)
-export * as VAR from "MDL" (ambl)##Child of EXPORT_SPECIFIER, type 'ExportNamespaceSpecifier':
-                           (ambl)##  - no local
+export * as VAR from "MDL"  (aml)##Child of EXPORT_SPECIFIER, type 'ExportNamespaceSpecifier':
+                            (aml)##  - no local
                               (m)##  - exported -> specifier
 export VAL from "MDL"        (bl)##Child of EXPORT_SPECIFIER, type 'ExportDefaultSpecifier':
                              (bl)##  - no local
