no commit message

--- a/Languages/Language_processing/Beautifiers/Multi_language/prettier.node_cli.txt
+++ b/Languages/Language_processing/Beautifiers/Multi_language/prettier.node_cli.txt
@@ -19,7 +19,7 @@ ALTERNATIVES ==>                  #For:
                                   #     - esformatter (and jsfmt): not maintained
                                   #     - es-beautifier: not maintained
 
-VERSION ==>                       #1.19.1
+VERSION ==>                       #2.0.1
 
 OPINIONATED ==>                   #By design prettier does not allow configuration.
                                   #There are only few configuration options available for JavaScript
@@ -97,9 +97,8 @@ CONF.overrides                    #Sub-CONF for specific files, with OBJ_ARR:
                                              \=+===============================+=/
 
 
-prettier [FILE|'GLOB'...]         #Prints to stdout
+prettier [FILE|DIR|'GLOB'...]     #Prints to stdout
                                   #Def: stdin
---stdin                           #
 --stdin-filepath FILE             #
 --write                           #Edit in-place
 
@@ -179,7 +178,7 @@ PRETTIER.getFileInfo[.sync]
 --print-width NUM                 #Def: 80
 --tab-width NUM                   #Def: 2
 --use-tabs                        #Def: false
---end-of-line auto|[cr][lf]       #Def: auto
+--end-of-line auto|[cr][lf]       #Def: lf
 
 --single-quote                    #Def: double quote except if STR contains double quotes
 --no-bracket-spacing              #{ ... } instead of {...}
@@ -195,10 +194,10 @@ PRETTIER.getFileInfo[.sync]
 GENERAL ==>                       #Parser is @babel/parser
 
 --no-semi                         #Instead of always. Except when needed
---trailing-comma STR              #Can be 'none' (def), 'es5' (only if ES5), 'all'
+--trailing-comma STR              #Can be 'none', 'es5' (only if ES5) (def), 'all'
 --arrow-parens STR                #Can be:
-                                  #  - 'avoid' (def): VAL => {...}
-                                  #  - 'always': (VAL) => {...}
+                                  #  - 'avoid': VAL => {...}
+                                  #  - 'always' (def): (VAL) => {...}
 --quote-props STR                 #Quotes around { VAR }. Can be:
                                   #  - 'as-needed' (def): only when required
                                   #  - 'preserve': do not change
@@ -255,7 +254,7 @@ GENERAL ==>                       #Actually uses same as JavaScript
 GENERAL ==>                       #Parser is eemeli's yaml
                                   #Can also be as front-matter in CSS/Markdown
 
---prose-wrap                      #See Markdown
+--prose-wrap STR                  #See Markdown
 
 
                                              /=+===============================+=\
@@ -338,5 +337,5 @@ STYLELINT-CONFIG-PRETTIER ==>    ##Stylelint config that:
                                              \=+===============================+=/
 
 
-GULP-PRETTIER[.check]([CONF])    ##Version 2.3.0
+GULP-PRETTIER[.check]([CONF])    ##Version 3.0.0
                                  ##Adds VINYL.isPrettier true if modified
