no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -9,7 +9,7 @@ ALTERNATIVES ==>                  #  - eslint (prefered): more rules, more confi
                                   #  - jscs: not maintained, merged with eslint
                                   #  - jshint
 
-VERSION ==>                       #7.0.0-alpha.2
+VERSION ==>                       #7.0.0-alpha.3
                                   #JavaScript linter, using Espree parser.
 
 TYPE                              #ESTree type
@@ -1372,7 +1372,7 @@ fp/no-proxy                      ##Avoid Proxy
 
 no-empty-function [OBJ]           #Avoid empty functions, unless contains comment
                                   #OBJ:
-                                  #  - allow STR_ARR: among 'functions', 'arrowFunctions', 'methods', 'generatorFunctions|Methods',
+                                  #  - allow STR_ARR: among '[async]functions', 'arrowFunctions', '[async]methods', 'generatorFunctions|Methods',
                                   #    'constructors', 'getters', 'setters'
 
 no-useless-return                 #Avoid "return;" at end of function
