no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -1662,9 +1662,9 @@ symbol-description                #Avoid Symbol(), prefer Symbol(STR)
                                              \=+===============================+=/
 
 
-handle-callback-err [STR]         #Must handle ERROR in Node.js callbacks FUNC(ERROR[, VAL])
+node/handle-callback-err [STR]    #Must handle ERROR in Node.js callbacks FUNC(ERROR[, VAL])
                                   #STR is ERROR name (def: 'err'), which can be 'NAME' or '^REGEXP' (must start with ^)
-callback-return [STR_ARR]         #In Node.js callbacks FUNC(ERROR[, VAL]), must call return after firing FUNC()
+node/callback-return [STR_ARR]    #In Node.js callbacks FUNC(ERROR[, VAL]), must call return after firing FUNC()
                                   #'VARR'_ARR are possible FUNC names (def: 'callback', 'cb', 'next')
 node/no-callback-literal         ##FUNC called 'cb|callback' first argument must be undefined|null|ERROR
 
@@ -1743,7 +1743,7 @@ import/*                         ##Node module "eslint-plugin-import
                                  ##        - jspm, babel, meteor, react-native, typescript
                                  ##  - import/cache OBJ: lifetime NUM (in secs, def: 30)
 
-node/*                           ##Module "eslint-plugin-node" (11.0.0)
+node/*                           ##Module "eslint-plugin-node" (11.1.0)
                                  ##Uses the following CONF.settings, which are defaults to RULE_CONF:
                                  ##  - allowModules 'MDL'_ARR: ignores those modules
                                  ##  - tryExtensions '.EXT'_ARR (def: '.js', '.json', '.node'): modules file extensions
@@ -1856,7 +1856,7 @@ sort-imports [OBJ]                #Sort import declarations according to 
                                   #  - ignoreMemberSort BOOL: if false (def), must also alphabetically sort VARs in
                                   #    import { VAR, ... } from 'MDL'
                                   #  - ignoreDeclarationSort BOOL: same for import 'MDL'
-no-mixed-requires [OBJ]           #Must group top-level declarations into groups:
+node/no-mixed-requires [OBJ]      #Must group top-level declarations into groups:
                                   #  - core modules
                                   #  - local module
                                   #  - node_modules
@@ -1892,8 +1892,8 @@ import/newline-after-import [OBJ]##Must have OBJ.count NUM (def: 1) newlines aft
 
 import/unambiguous               ##Make sure file types matches parserOptions.sourceType 'script|module'
 
-global-require                    #require() must be at top-level scope
-no-new-require                    #Avoid new require()
+node/global-require               #require() must be at top-level scope
+node/no-new-require               #Avoid new require()
 import/no-dynamic-require        ##Avoid require(STR) where STR is computed, i.e. not a literal string
 
 import/no-commonjs [OBJ]         ##Avoid require() or module.exports
@@ -1999,10 +1999,11 @@ no-restricted-imports             #Avoid import ... from 'MDL' using blacklisted
                                   #  - patterns STR_ARR: globbing patterns (including globstar)
 no-restricted-exports [OBJ]       #Avoid export ... from 'MDL' using blacklisted OBJ.restrictedNamedExports STR_ARR
                                   #STR_ARR can include 'default'
-no-restricted-modules             #Avoid require('CORE_MODULE') from blacklisted STRM_ARR
- ...STR_ARR|OBJC_ARR              #Can also be OBJ:
-                                  #  - paths STRM_ARR: full path
-                                  #  - patterns STR_ARR: globbing patterns (including globstar)
+node/no-restricted-require        #Avoid require('CORE_MODULE') from blacklisted ones
+ ...'GLOB'_ARR|OBJ_ARR            #OBJ:
+                                  #  - name 'GLOB'
+                                  #  - message STR
+node/no-restricted-import         #Same for import
 import/no-nodejs-modules [OBJ]   ##Avoid Node.js core modules (e.g. if client-side code)
                                  ##OBJ: allow 'MDL'_ARR: whitelists
 
@@ -2095,9 +2096,9 @@ no-new-func                       #Avoid new Function(STR)
 
 no-buffer-constructor             #Avoid Buffer() or new Buffer()
 unicorn/no-new-buffer            ##Avoid new Buffer() (prefer Buffer.from|alloc())
-no-path-concat                    #Avoid __dirname|__filename + STR, use PATH.join|resolve()
-no-process-env                    #Avoid process.env
-no-process-exit                   #Avoid process.exit()
+node/no-path-concat               #Avoid __dirname|__filename + STR, use PATH.join|resolve()
+node/no-process-env               #Avoid process.env
+node/no-process-exit              #Avoid process.exit()
 unicorn/no-process-exit          ##Same but allows if hashbang, or if inside process.on()
 
 no-script-url                     #Avoid 'javascript:*' URLs
